feat: сделать докер